# Text_Viewer-Editor

./: README.md  com.app.TextViewer.json  meson.build
data/: com.app.TextViewer.appdata.xml.in  com.app.TextViewer.desktop.in  com.app.TextViewer.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  text_viewer_app-application.c  text_viewer_app-application.h  text_viewer_app-window.c  text_viewer_app-window.h  text_viewer_app-window.ui  text_viewer_app.gresource.xml
